chore: TransactionAwareCacheManagerProxy가 유효한 경우 기록