@@ -18,10 +18,6 @@ repositories {
     mavenCentral()
 }
 
-ext {
-  
-}
-
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -92,7 +88,6 @@ dependencies {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 
 jacocoTestReport {
